# lemon-antbox

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: app.rs  gfx.rs  main.rs  ui.rs
app/src/ui/: types.rs  widgets.rs  windows.rs
app/src/ui/types/: draw_mode.rs
app/src/ui/widgets/: enum_select.rs  simulation_ant.rs  simulation_cell.rs
app/src/ui/windows/: cell_inspector.rs  display_settings.rs  draw_settings.rs  main.rs  simulation_settings.rs  simulation_stats.rs
core/: Cargo.toml
core/src/: ant_box.rs  antbox.rs  lib.rs  simulation.rs  threaded.rs
core/src/ant_box/: ant.rs  cell.rs
core/src/simulation/: ant.rs  cell.rs  pheromones.rs  settings.rs  stats.rs
core/src/threaded/: ant_buffer.rs  command.rs  context.rs  event.rs  shared.rs
core/src/utils/: color.rs
