[package]
name = "lemon-antbox-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
threaded = ["triple_buffer"]

[dependencies]
bitflags = "2.10.0"
fastrand = "2.3.0"
num_enum = { workspace = true }
rayon = "1.11.0"
strum = { workspace = true }
strum_macros = { workspace = true }
triple_buffer = { version = "8.1.1", optional = true }